# signal-research

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
data/: symbols.json
research/: notebook.ipynb
src/signal_research/: evaluation.py  indicators.py  plotting.py  processing.py  signals.py
